; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/systat/extr_netstat.c_enter_kvm.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/systat/extr_netstat.c_enter_kvm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inpcb = type { i32, i32 }
%struct.socket = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }
%struct.netinfo = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.inpcb*, %struct.socket*, i32, i8*)* @enter_kvm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enter_kvm(%struct.inpcb* %0, %struct.socket* %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.inpcb*, align 8
  %6 = alloca %struct.socket*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.netinfo*, align 8
  store %struct.inpcb* %0, %struct.inpcb** %5, align 8
  store %struct.socket* %1, %struct.socket** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load %struct.inpcb*, %struct.inpcb** %5, align 8
  %11 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %10, i32 0, i32 1
  %12 = load %struct.inpcb*, %struct.inpcb** %5, align 8
  %13 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i8*, i8** %8, align 8
  %17 = call %struct.netinfo* @enter(i32* %11, i32 %14, i32 %15, i8* %16)
  store %struct.netinfo* %17, %struct.netinfo** %9, align 8
  %18 = icmp ne %struct.netinfo* %17, null
  br i1 %18, label %19, label %32

19:                                               ; preds = %4
  %20 = load %struct.socket*, %struct.socket** %6, align 8
  %21 = getelementptr inbounds %struct.socket, %struct.socket* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.netinfo*, %struct.netinfo** %9, align 8
  %25 = getelementptr inbounds %struct.netinfo, %struct.netinfo* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load %struct.socket*, %struct.socket** %6, align 8
  %27 = getelementptr inbounds %struct.socket, %struct.socket* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.netinfo*, %struct.netinfo** %9, align 8
  %31 = getelementptr inbounds %struct.netinfo, %struct.netinfo* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  br label %32

32:                                               ; preds = %19, %4
  ret void
}

declare dso_local %struct.netinfo* @enter(i32*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
